--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -3,5 +3,7 @@
   "Main": "Main",
   "About site": "About site",
   "Page Not Found": "Page Not Found",
-  "Toggle": "Toggle"
+  "Toggle": "Toggle",
+  "About": "About",
+  "Throw Error": "Throw Error"
 }
