--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -3,5 +3,7 @@
   "Main": "Главная",
   "About site": "О сайте",
   "Page Not Found": "Страница не найдена",
-  "Toggle": "Переключить"
+  "Toggle": "Переключить",
+  "About": "О нас",
+  "Throw Error": "Выбросить ошибку"
 }
