--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -1,9 +1,10 @@
 {
-  "Language": "Русский",
-  "Main": "Главная",
-  "About site": "О сайте",
-  "Page Not Found": "Страница не найдена",
-  "Toggle": "Переключить",
-  "About": "О нас",
-  "Throw Error": "Выбросить ошибку"
+	"Language": "Русский",
+	"Lang": "ru",
+	"Main": "Главная",
+	"About site": "О сайте",
+	"Page Not Found": "Страница не найдена",
+	"Toggle": "Переключить",
+	"About": "О нас",
+	"Throw Error": "Выбросить ошибку"
 }
