--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -13,5 +13,5 @@
   "Authorization form": "Authoriztion form",
   "Username or password is incorrect": "Username or password is incorrect",
   "Sign Out": "Sign Out",
-  "Log Out": "Log Out"
+  "Profile": "Profile"
 }
