--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -13,5 +13,6 @@
   "Authorization form": "Форма авторизации",
   "Username or password is incorrect": "Вы ввели неверный имя пользователя или пароль",
   "Sign Out": "Выйти",
-  "Log Out": "Выйти"
+  "Profile": "Профиль"
+
 }
