create tests for profile

--- a/public/locales/ru/profile.json
+++ b/public/locales/ru/profile.json
@@ -5,11 +5,15 @@
     "Your Name": "Ваше имя",
     "Your Last Name": "Ваша фамилия",
     "Try to refresh the page": "Попробуйте обновить страницу",
-    "Did not succeed to load profile": "Не удалось загрузить профиль",
     "Cancel": "Отменить",
     "Save": "Сохранять",
     "Your Country": "Твоя страна",
     "Your City": "Ваш город",
-    "Your Currency": "Ваша валюта"
+    "Your Currency": "Ваша валюта",
+		"INCORRECT_USER_DATA": "Неправильные данные пользователя",
+		"INCORRECT_AGE": "Этот возраст не существует",
+		"SERVER_ERROR_LOADING_PROFILE": "Не удалось загрузить профиль",
+		"NO_DATA": "Нету Данных!"
   }
 }
+ 
