--- a/public/locales/en/article.json
+++ b/public/locales/en/article.json
@@ -1,1 +1,7 @@
-{}
+{
+  "article": {
+    "Article is not found": "Article is not found",
+    "The error has acquired": "The error has acquired",
+    "The error has occurred": "The error has occurred"
+  }
+}
