added comments to Articles Details

--- a/public/locales/en/article.json
+++ b/public/locales/en/article.json
@@ -2,6 +2,7 @@
   "article": {
     "Article is not found": "Article is not found",
     "The error has acquired": "The error has acquired",
-    "The error has occurred": "The error has occurred"
+    "The error has occurred": "The error has occurred",
+    "Comments": "Comments"
   }
 }
