--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -15,5 +15,6 @@
   "Sign Out": "Sign Out",
   "Profile": "Profile",
   "Your Currency": "Your Currency",
-  "Your Country": "Your Country"
+  "Your Country": "Your Country",
+  "There is no comments": "There is no comments"
 }
