--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -18,5 +18,6 @@
     "Your Age": "Ваш возраст"
   },
   "Your Currency": "Ваша валюта",
-  "Your Country": "Твоя страна"
+  "Your Country": "Твоя страна",
+  "There is no comments": "Нет комментариев"
 }
