add comment form, add profiles for users

--- a/public/locales/en/profile.json
+++ b/public/locales/en/profile.json
@@ -1,19 +1,17 @@
 {
   "profile": {
     "Profile": "Profile",
-    "Edit": "Edit",
     "Your Name": "Your Name",
     "Your Last Name": "Your Last Name",
     "Try to refresh the page": "Try to refresh the page",
-    "Cancel": "Cancle",
-    "Save": "Save",
     "Your Age": "Your Age",
     "Your Country": "Your Country",
     "Your City": "Your City",
     "Your Currency": "Your Currency",
-		"INCORRECT_USER_DATA": "Incorrect user data",
-		"INCORRECT_AGE": "This age can't exists try another",
-		"SERVER_ERROR_LOADING_PROFILE": "Did not succeed to load profile",
-		"NO_DATA": "No Data!"
+    "INCORRECT_USER_DATA": "Incorrect user data",
+    "INCORRECT_AGE": "This age can't exists try another",
+    "SERVER_ERROR_LOADING_PROFILE": "Did not succeed to load profile",
+    "NO_DATA": "No Data!",
+    "Did not succeed to load profile": "Did not succeed to load profile"
   }
 }
