--- a/public/locales/ru/profile.json
+++ b/public/locales/ru/profile.json
@@ -1,19 +1,16 @@
 {
   "profile": {
     "Profile": "Профиль",
-    "Edit": "Редактировать",
     "Your Name": "Ваше имя",
     "Your Last Name": "Ваша фамилия",
     "Try to refresh the page": "Попробуйте обновить страницу",
-    "Cancel": "Отменить",
-    "Save": "Сохранять",
     "Your Country": "Твоя страна",
     "Your City": "Ваш город",
     "Your Currency": "Ваша валюта",
-		"INCORRECT_USER_DATA": "Неправильные данные пользователя",
-		"INCORRECT_AGE": "Этот возраст не существует",
-		"SERVER_ERROR_LOADING_PROFILE": "Не удалось загрузить профиль",
-		"NO_DATA": "Нету Данных!"
+    "INCORRECT_USER_DATA": "Неправильные данные пользователя",
+    "INCORRECT_AGE": "Этот возраст не существует",
+    "SERVER_ERROR_LOADING_PROFILE": "Не удалось загрузить профиль",
+    "NO_DATA": "Нету Данных!",
+    "Did not succeed to load profile": "Не удалось загрузить профиль"
   }
 }
- 
