add article list,  article item,   skeleton and stories

--- a/public/locales/en/article.json
+++ b/public/locales/en/article.json
@@ -3,6 +3,8 @@
     "Article is not found": "Article is not found",
     "The error has acquired": "The error has acquired",
     "The error has occurred": "The error has occurred",
-    "Comments": "Comments"
+    "Comments": "Comments",
+    "Read More": "Read More...",
+    "Back to list": "Back to list"
   }
 }
