--- a/public/locales/ru/article.json
+++ b/public/locales/ru/article.json
@@ -3,6 +3,8 @@
     "Article is not found": "Статья не найдена",
     "The error has acquired": "Ошибка приобрела",
     "The error has occurred": "Произошла ошибка",
-    "Comments": "Комментарии"
+    "Comments": "Комментарии",
+    "Read More": "Читать далее...",
+    "Back to list": "Обратно к списку"
   }
 }
