add recommendations articles for articleDetails

--- a/public/locales/en/article.json
+++ b/public/locales/en/article.json
@@ -18,6 +18,7 @@
     "IT": "IT",
     "Economics": "Economics",
     "Science": "Science",
-    "Articles doesnt found": "Articles doesn't found"
+    "Articles doesnt found": "Articles doesn't found",
+    "Recomend": "Recomend"
   }
 }
