--- a/public/locales/ru/article.json
+++ b/public/locales/ru/article.json
@@ -18,6 +18,7 @@
     "IT": "IT",
     "Economics": "Экономика",
     "Science": "Наука",
-    "Articles doesnt found": "Статьи не найдены"
+    "Articles doesnt found": "Статьи не найдены",
+    "Recomend": "Рекомендуем"
   }
 }
