add create and edit pages

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -19,7 +19,9 @@
   "There is no comments": "There is no comments",
   "Type your comment": "Type your comment",
   "Send": "Send",
-	"Edit": "Edit",
-	"Cancel": "Cancel",
-	"Save": "Save"	
+  "Edit": "Edit",
+  "Cancel": "Cancel",
+  "Save": "Save",
+  "Dream Project": "Dream Project",
+  "Create article": "Create article"
 }
