--- a/public/locales/ru/article.json
+++ b/public/locales/ru/article.json
@@ -19,6 +19,9 @@
     "Economics": "Экономика",
     "Science": "Наука",
     "Articles doesnt found": "Статьи не найдены",
-    "Recomend": "Рекомендуем"
+    "Recomend": "Рекомендуем",
+    "Edit": "Редактировать",
+    "Article Edit": "Редактировать статью",
+    "Article Creation": "Создание статьи"
   }
 }
