--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -22,7 +22,9 @@
   "There is no comments": "Нет комментариев",
   "Type your comment": "Введите комментарий",
   "Send": "Отправить",
-	"Edit": "Редактировать",
-	"Cancel": "Отменить",
-	"Save": "Сохранять"
+  "Edit": "Редактировать",
+  "Cancel": "Отменить",
+  "Save": "Сохранять",
+  "Dream Project": "Dream Project",
+  "Create article": "Создать статью"
 }
