--- a/public/locales/en/article.json
+++ b/public/locales/en/article.json
@@ -1,5 +1,5 @@
 {
-  "article": {
+  
     "Article is not found": "Article is not found",
     "The error has acquired": "The error has acquired",
     "The error has occurred": "The error has occurred",
@@ -19,6 +19,9 @@
     "Economics": "Economics",
     "Science": "Science",
     "Articles doesnt found": "Articles doesn't found",
-    "Recomend": "Recomend"
-  }
+    "Recomend": "Recomend",
+    "Edit": "Edit",
+    "Article Edit": "Article edit",
+    "Article Creation": "Article creation"
+  
 }
