--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -23,5 +23,7 @@
   "Cancel": "Cancel",
   "Save": "Save",
   "Dream Project": "Dream Project",
-  "Create article": "Create article"
+  "Create article": "Create article",
+  "Choose a Country": "Choose a Country",
+  "Choose Currency": "Choose Currency"
 }
