--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -26,5 +26,7 @@
   "Cancel": "Отменить",
   "Save": "Сохранять",
   "Dream Project": "Dream Project",
-  "Create article": "Создать статью"
+  "Create article": "Создать статью",
+  "Choose a Country": "Выберите страну",
+  "Choose Currency": "Выберите Валюту"
 }
