add rtk query pi, inject article recommendations api big refactoring

--- a/public/locales/en/article.json
+++ b/public/locales/en/article.json
@@ -1,27 +1,28 @@
 {
-  
-    "Article is not found": "Article is not found",
-    "The error has acquired": "The error has acquired",
-    "The error has occurred": "The error has occurred",
-    "Comments": "Comments",
-    "Read More": "Read More...",
-    "Back to list": "Back to list",
-    "Search": "Search",
-    "Sort by": "Sort by",
-    "By": "By",
-    "increase": "ascending",
-    "descending": "descending",
-    "creating date": "creating date",
-    "title": "title",
-    "views": "views",
-    "All": "All",
-    "IT": "IT",
-    "Economics": "Economics",
-    "Science": "Science",
-    "Articles doesnt found": "Articles doesn't found",
-    "Recomend": "Recomend",
-    "Edit": "Edit",
-    "Article Edit": "Article edit",
-    "Article Creation": "Article creation"
-  
+  "Article is not found": "Article is not found",
+  "The error has acquired": "The error has acquired",
+  "The error has occurred": "The error has occurred",
+  "Comments": "Comments",
+  "Read More": "Read More...",
+  "Back to list": "Back to list",
+  "Search": "Search",
+  "Sort by": "Sort by",
+  "By": "By",
+  "increase": "ascending",
+  "descending": "descending",
+  "creating date": "creating date",
+  "title": "title",
+  "views": "views",
+  "All": "All",
+  "IT": "IT",
+  "Economics": "Economics",
+  "Science": "Science",
+  "Articles doesnt found": "Articles doesn't found",
+  "Recomend": "Recomend",
+  "Edit": "Edit",
+  "Article Edit": "Article edit",
+  "Article Creation": "Article creation",
+  "article": {
+    "An error ocured after tring to load articles": "An error ocured after tring to load articles"
+  }
 }
