add private route with required roles

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -25,5 +25,7 @@
   "Dream Project": "Dream Project",
   "Create article": "Create article",
   "Choose a Country": "Choose a Country",
-  "Choose Currency": "Choose Currency"
+  "Choose Currency": "Choose Currency",
+  "Administration": "Administration",
+  "You dont have permission to access this page": "You don't have permission to access this page"
 }
