add article rating card with lazy loading and api

--- a/public/locales/en/article.json
+++ b/public/locales/en/article.json
@@ -23,6 +23,8 @@
   "Article Edit": "Article edit",
   "Article Creation": "Article creation",
   "article": {
-    "An error ocured after tring to load articles": "An error ocured after tring to load articles"
+    "An error ocured after tring to load articles": "An error ocured after tring to load articles",
+    "Feedback this article": "Feedback this article",
+    "Feedback this article This can help upgrade quality": "Feedback this article. This can help upgrade quality"
   }
 }
