--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -29,5 +29,6 @@
   "Administration": "Administration",
   "You dont have permission to access this page": "You don't have permission to access this page",
   "Your Feedback": "Your Feedback",
-  "Close": "Close"
+  "Close": "Close",
+  "Thanks for your rating": "Thanks for your rating"
 }
