--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -32,5 +32,6 @@
   "Administration": "Админка",
   "You dont have permission to access this page": "У вас нет разрешения на доступ к этой странице",
   "Your Feedback": "Ваш отзыв",
-  "Close": "Закрыть"
+  "Close": "Закрыть",
+  "Thanks for your rating": "Спасибо за вашу оценку"
 }
