--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -30,5 +30,6 @@
   "You dont have permission to access this page": "You don't have permission to access this page",
   "Your Feedback": "Your Feedback",
   "Close": "Close",
-  "Thanks for your rating": "Thanks for your rating"
+  "Thanks for your rating": "Thanks for your rating",
+	"": ""
 }
