--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -33,5 +33,6 @@
   "You dont have permission to access this page": "У вас нет разрешения на доступ к этой странице",
   "Your Feedback": "Ваш отзыв",
   "Close": "Закрыть",
-  "Thanks for your rating": "Спасибо за вашу оценку"
+  "Thanks for your rating": "Спасибо за вашу оценку",
+	"": ""
 }
