add greeting modal for articles page

--- a/public/locales/en/article.json
+++ b/public/locales/en/article.json
@@ -25,6 +25,8 @@
   "article": {
     "An error ocured after tring to load articles": "An error ocured after tring to load articles",
     "Feedback this article": "Feedback this article",
-    "Feedback this article This can help upgrade quality": "Feedback this article. This can help upgrade quality"
+    "Feedback this article This can help upgrade quality": "Feedback this article. This can help upgrade quality",
+    "Welcome to the articles page": "Welcome to the articles page",
+    "Here you can watch articles on different topics": "Here you can watch articles on different topics"
   }
 }
