--- a/public/locales/ru/article.json
+++ b/public/locales/ru/article.json
@@ -25,6 +25,8 @@
     "Article Creation": "Создание статьи",
     "An error ocured after tring to load articles": "Произошла ошибка после попытки загрузки статей.",
     "Feedback this article": "Напишите отзыв об этой статье",
-    "Feedback this article This can help upgrade quality": "Оставьте отзыв об этой статье. \nЭто может помочь улучшить качество"
+    "Feedback this article This can help upgrade quality": "Оставьте отзыв об этой статье. \nЭто может помочь улучшить качество",
+    "Welcome to the articles page": "Добро пожаловать на страницу статей",
+    "Here you can watch articles on different topics": "Здесь вы можете посмотреть статьи на разные темы"
   }
 }
