--- a/public/locales/ru/article.json
+++ b/public/locales/ru/article.json
@@ -6,7 +6,7 @@
   "Read More": "Читать далее...",
   "Back to list": "Обратно к списку",
   "Search": "Поиск",
-  "Sort by": "Сортировать по",
+  "Sort by:": "Сортировать по:",
   "By": "По",
   "increase": "возрастанию",
   "descending": "убыванию",
