redesign profile card

--- a/public/locales/en/profile.json
+++ b/public/locales/en/profile.json
@@ -12,7 +12,11 @@
     "INCORRECT_AGE": "This age can't exists try another",
     "SERVER_ERROR_LOADING_PROFILE": "Did not succeed to load profile",
     "NO_DATA": "No Data!",
-    "Did not succeed to load profile": "Did not succeed to load profile"
+    "Did not succeed to load profile": "Did not succeed to load profile",
+    "First Name": "First Name",
+    "Last Name": "Last Name",
+    "Age": "Age",
+    "City": "City"
   },
   "Choose a Country": "Choose Country"
 }
