add ui design switcher, mutation for  cahnge feature flag , settings page added props for Flex, AppImage, UIText

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -31,5 +31,10 @@
   "Your Feedback": "Your Feedback",
   "Close": "Close",
   "Thanks for your rating": "Thanks for your rating",
-	"": ""
+  "": "",
+  "User settings": "User settings",
+  "New": "New",
+  "Old": "Old",
+  "Interface Variant": "Interface Variant >",
+  "Settings": "Settings"
 }
