--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -34,5 +34,10 @@
   "Your Feedback": "Ваш отзыв",
   "Close": "Закрыть",
   "Thanks for your rating": "Спасибо за вашу оценку",
-	"": ""
+  "": "",
+  "User settings": "Пользовательские настройки",
+  "New": "Новый",
+  "Old": "Старый",
+  "Interface Variant": "Вариант интерфейса >",
+  "Settings": "Настройки"
 }
