--- a/public/locales/ru/article.json
+++ b/public/locales/ru/article.json
@@ -13,20 +13,22 @@
   "creating date": "дате создания",
   "title": "заголовоку",
   "views": "просмотрам",
-  "article": {
-    "All": "Все",
-    "IT": "IT",
-    "Economics": "Экономика",
-    "Science": "Наука",
-    "Articles doesnt found": "Статьи не найдены",
-    "Recomend": "Рекомендуем",
-    "Edit": "Редактировать",
-    "Article Edit": "Редактировать статью",
-    "Article Creation": "Создание статьи",
-    "An error ocured after tring to load articles": "Произошла ошибка после попытки загрузки статей.",
-    "Feedback this article": "Напишите отзыв об этой статье",
-    "Feedback this article This can help upgrade quality": "Оставьте отзыв об этой статье. \nЭто может помочь улучшить качество",
-    "Welcome to the articles page": "Добро пожаловать на страницу статей",
-    "Here you can watch articles on different topics": "Здесь вы можете посмотреть статьи на разные темы"
-  }
+  "All": "Все",
+  "IT": "IT",
+  "Economics": "Экономика",
+  "Science": "Наука",
+  "Articles doesnt found": "Статьи не найдены",
+  "Recomend": "Рекомендуем",
+  "Edit": "Редактировать",
+  "Article Edit": "Редактировать статью",
+  "Article Creation": "Создание статьи",
+  "An error ocured after tring to load articles": "Произошла ошибка после попытки загрузки статей.",
+  "Feedback this article": "Напишите отзыв об этой статье",
+  "Feedback this article This can help upgrade quality": "Оставьте отзыв об этой статье. \nЭто может помочь улучшить качество",
+  "Welcome to the articles page": "Добро пожаловать на страницу статей",
+  "Here you can watch articles on different topics": "Здесь вы можете посмотреть статьи на разные темы",
+  "{{count}} views_zero": "{{count}} просмотров",
+  "{{count}} views_one": "{{count}}1 просмотр",
+  "{{count}} views_few": "{{count}} просмотра",
+  "{{count}} views_many": "{{count}} просмотров"
 }
