--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -39,5 +39,6 @@
   "New": "Новый",
   "Old": "Старый",
   "Interface Variant": "Вариант интерфейса >",
-  "Settings": "Настройки"
+  "Settings": "Настройки",
+  "Recomend": "Рекомендовать"
 }
