--- a/public/locales/ru/main.json
+++ b/public/locales/ru/main.json
@@ -1,4 +1,6 @@
 {
   "Main": "Главная",
-  "My journey in technology began with": "Мой путь в сфере технологий начался с увлечения созданием вещей, которые могут повлиять на жизнь людей. Эта страсть привела меня в мир фронтенд-разработки, где я нашел радость в превращении сложных проблем в красивые, функциональные веб-приложения."
+  "My journey in technology began with": "Мой путь в сфере технологий начался с увлечения созданием вещей, которые могут повлиять на жизнь людей. Эта страсть привела меня в мир фронтенд-разработки, где я нашел радость в превращении сложных проблем в красивые, функциональные веб-приложения.",
+  "Hi, my name is Michael.": "Привет, меня зовут Майкл.",
+  "I'm  a Passionate Front-End Developer Specializing in React. Holon, Israel": "Я увлеченный фронтенд-разработчик, специализирующийся на React. Холон, Израиль."
 }
