fixed translation and header

--- a/public/locales/en/main.json
+++ b/public/locales/en/main.json
@@ -3,5 +3,5 @@
   "Hi, my name is Michael.": "Hi, my name is Michael.",
   "I'm  a Passionate Front-End Developer Specializing in React. Holon, Israel": "I'm  a Passionate Front-End Developer Specializing in React. Holon, Israel",
 
-  "My journey in technology began with": "My journey in technology began with a fascination for creating things that could impact people's lives. This passion led me to the world of front-end development, where I found joy in turning complex problems into beautiful, functional web applications."
+  "My journey in technology began with": "My journey in technology started with an enthusiasm for creating innovations that could significantly impact people's lives. Following my service in the army, where I developed code in C#, I realized my desire for a change in direction. Subsequently, I returned to my initial passion: JavaScript. This passion steered me towards the realm of front-end development, where I discovered the satisfaction of transforming complex challenges into elegant, functional web applications."
 }
